WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116755
CSSParser::parseImageResolution doesn't need a parameter.
https://bugs.webkit.org/show_bug.cgi?id=116755
Summary
CSSParser::parseImageResolution doesn't need a parameter.
Jaehun Lim
Reported
2013-05-24 21:01:53 PDT
parseImageResolution() can get CSSPraserValueList from m_valueList directly.
Attachments
Patch
(2.62 KB, patch)
2013-05-24 21:36 PDT
,
Jaehun Lim
no flags
Details
Formatted Diff
Diff
Patch
(2.72 KB, patch)
2013-05-26 18:11 PDT
,
Jaehun Lim
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jaehun Lim
Comment 1
2013-05-24 21:36:41 PDT
Created
attachment 202874
[details]
Patch
Darin Adler
Comment 2
2013-05-26 17:44:49 PDT
Comment on
attachment 202874
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=202874&action=review
> Source/WebCore/css/CSSParser.cpp:2983 > m_valueList->next();
This line of code does not seem necessary. The parseImageResolution function already kept calling next() until it returned 0. This line of code does nothing.
Jaehun Lim
Comment 3
2013-05-26 18:09:05 PDT
Comment on
attachment 202874
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=202874&action=review
>> Source/WebCore/css/CSSParser.cpp:2983 >> m_valueList->next(); > > This line of code does not seem necessary. The parseImageResolution function already kept calling next() until it returned 0. This line of code does nothing.
Yes. I think "if (!parsedValue) / return false;" are redundant, too. parsedValue will be checked after switch case statement. I'll remove these two lines.
Jaehun Lim
Comment 4
2013-05-26 18:11:32 PDT
Created
attachment 202941
[details]
Patch
WebKit Commit Bot
Comment 5
2013-05-26 19:32:52 PDT
Comment on
attachment 202941
[details]
Patch Clearing flags on attachment: 202941 Committed
r150734
: <
http://trac.webkit.org/changeset/150734
>
WebKit Commit Bot
Comment 6
2013-05-26 19:32:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug