CSSParser::parseImageResolution doesn't need a parameter. https://bugs.webkit.org/show_bug.cgi?id=116755

Patch by Jaehun Lim <ljaehun.lim@samsung.com> on 2013-05-26
Reviewed by Darin Adler.

parseImageResolution() can get CSSPraserValueList from m_valueList directly.

No new tests, no behavior change.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseImageResolution):
* css/CSSParser.h:

Canonical link: https://commits.webkit.org/135102@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150734 268f45cc-cd09-0410-ab3c-d52691b4dbfc